# dkkk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app.sh  docker-compose.yml  docker-entrypoint.sh  docker.env  oc  openapi_copilot.yaml  pyproject.toml  sonar-project.properties
models/: Methanex_FinModel.xlsx
scripts/: analyze_results.py  diagnose_server_log.sh  docker-entrypoint.sh  prepare-deploy.sh  qa.txt  run_qa.sh  run_tool_queries.py  test_service.sh  validate_test_data.py
src/aigw_modules/: base.py
src/aigw_modules/ai_agents/: memory.py
src/aigw_modules/hub_services/: pangolin.py
src/aigw_service/: __main__.py  context.py  exceptions.py  giga_test.py
src/aigw_service/api/: __init__.py  metric_router.py  middleware.py  os_router.py
src/aigw_service/api/v1/: __init__.py  excel_handler.py  routers.py  schemas.py  services.py  tools.py  utils.py
src/aigw_service/api/v1/agent_examples/: __init__.py  graph_example.py  memorizer_agent_example.py  react_agent_example.py
src/aigw_service/config/: __init__.py  base_config.py  utils.py
src/aigw_service/config/agent/: config.py
src/aigw_service/config/app/: config.py
src/aigw_service/config/gigachat/: __init__.py  config.py
src/aigw_service/config/idp/: __init__.py  config.py
src/aigw_service/config/langfuse/: __init__.py  config.py
src/aigw_service/config/logger/: __init__.py  config.py
src/aigw_service/config/pangolin/: __init__.py  config.py
src/aigw_service/config/platform_v_search/: __init__.py  config.py
src/aigw_service/logger/: context_vars.py  logger.py
tests/: README.md  test_tools_performance.py
tests/data/: Methanex_tool_test_queries.xlsx  qa.txt
tests/integration/v1_api/: conftest.py  constants.py  test_service.py
tests/unit/: test_stop_event.py  test_tool_dedup.py
